# raincurve-cli

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  llms.txt  pyproject.toml
raincurve/: __init__.py  main.py  orchestrator.py
raincurve/agents/: base_agent.py  chat_agent.py  code_analysis_agent.py  cognition.py  e2e_agent.py  environment_agent.py  error_classifier.py  infra_agent.py  memory.py  overseer_agent.py  recovery_agent.py  schema_extractor.py  seeder_agent.py  service_agent.py  tool_guardrails.py
raincurve/auth/: llm_auth.py  raincurve_auth.py
raincurve/browser/: container_script.py  manager.py  viewer.py
raincurve/cli/: cmd_chat.py  cmd_doctor.py  cmd_down.py  cmd_help.py  cmd_init.py  cmd_login.py  cmd_remote.py  cmd_sandbox.py  cmd_up.py
raincurve/config/: __init__.py  global_config.py  project_config.py  schemas.py
raincurve/context/: __init__.py  shared.py
raincurve/docker/: network.py  resource_limits.py
raincurve/models/: __init__.py  build_plan.py  code_context.py  repo_brief.py  run_state.py
raincurve/pipe/: __init__.py  domains.py  mock_agent.py  models.py  server.py  state.py
raincurve/remote/: connection.py  provisioner.py
raincurve/services/: recipes.py
raincurve/snapshot/: manager.py
raincurve/stubs/: detector.py
raincurve/ui/: __init__.py  confirm.py  console.py  live_panel.py
raincurve/utils/: repo_analyzer.py  repo_scanner.py
raincurve/watcher/: fs_watcher.py
tests/: test_code_context.py  test_cognition.py  test_e2e_agent.py  test_orchestrator.py  test_pipe.py
